@@ -22,14 +22,17 @@ public enum CurricularRuleLevel {
 
     ENROLMENT_WITH_RULES(true),
 
+    @Deprecated
     ENROLMENT_WITH_RULES_AND_TEMPORARY_ENROLMENT(true),
 
     ENROLMENT_NO_RULES(true),
 
     ENROLMENT_VERIFICATION_WITH_RULES(true),
 
+    @Deprecated
     IMPROVEMENT_ENROLMENT(false),
 
+    @Deprecated
     SPECIAL_SEASON_ENROLMENT(false),
 
     EXTRA_ENROLMENT(false),
